Added options for ChibiOS debugging, also fixed accelerometer acquisition
Change-Id: I45da1c7a29a74239982c7a206a52e116c3e9be25

--- a/sw_imu/CMakeLists.txt
+++ b/sw_imu/CMakeLists.txt
@@ -67,6 +67,7 @@ option(USE_FPU "Use the floating point unit" OFF)
 option(USE_RTC_SCHED_TICK "Use the RTC for scheduler tick instead of SysTick" OFF)
 option(SLEEP_WHEN_IDLE "Try to sleep whenever the CPU is idle" OFF)
 option(USE_CLK_MGR "Use the clock manager to keep the CPU in its lowest power mode" ON)
+option(CHIBIOS_DEBUG "Enable ChibiOS debugging (a bit of CPU overhead)" OFF)
 
 option(DEBUG_USE_SVD "Use pycmdebug and an SVD file for debugging" OFF)
 SET(XTAL_FREQ "HSE crystal frequency" CACHE STRING "8000000")
@@ -119,6 +120,22 @@ else(${USE_CLK_MGR})
 	message("Option: Don't use clock manager")
 	add_definitions(-DUSE_CLK_MGR=0)
 endif(${USE_CLK_MGR})
+
+if(${CHIBIOS_DEBUG})
+	message("Option: ChibiOS debugging enabled")
+	add_definitions(-DCH_DBG_SYSTEM_STATE_CHECK=TRUE)
+	add_definitions(-DCH_DBG_ENABLE_CHECKS=TRUE)
+	add_definitions(-DCH_DBG_ENABLE_ASSERTS=TRUE)
+	add_definitions(-DCH_DBG_ENABLE_STACK_CHECK=TRUE)
+	add_definitions(-DCH_DBG_FILL_THREADS=TRUE)
+else(${CHIBIOS_DEBUG})
+	message("Option: ChibiOS debugging disabled")
+	add_definitions(-DCH_DBG_SYSTEM_STATE_CHECK=FALSE)
+	add_definitions(-DCH_DBG_ENABLE_CHECKS=FALSE)
+	add_definitions(-DCH_DBG_ENABLE_ASSERTS=FALSE)
+	add_definitions(-DCH_DBG_ENABLE_STACK_CHECK=FALSE)
+	add_definitions(-DCH_DBG_FILL_THREADS=FALSE)
+endif(${CHIBIOS_DEBUG})
 
 set(LINKER_SCRIPT ${OS_DIR}/ports/GCC/ARMCMx/STM32F4xx/ld/STM32F405xG.ld)
 
