Added SF configuration, got rid of pins that I don't use on mt29x
Change-Id: I55900df61d4d6ae1809c9084b227fdb0b12035e0

--- a/sw_imu/CMakeLists.txt
+++ b/sw_imu/CMakeLists.txt
@@ -99,11 +99,11 @@ else(${USE_FPU})
 endif(${USE_FPU})
 
 if(${BOARD_REVISION} EQUAL "1")
-	add_definitions(-DHSE_VALUE=8000000 -DSTM32_HSECLK=8000000)
+	add_definitions(-DHSE_VALUE=8000000 -DSTM32_HSECLK=8000000 -DBOARD_BB=1)
 	message("Option: Building for the blue board")
 	set(PLATFORM_BOARD_DIR "src/platform/bb")
 elseif(${BOARD_REVISION} EQUAL "2")
-	add_definitions(-DHSE_VALUE=25000000 -DSTM32_HSECLK=25000000)
+	add_definitions(-DHSE_VALUE=25000000 -DSTM32_HSECLK=25000000 -DBOARD_SF=1)
 	message("Option: Building for strike force board")
 	set(PLATFORM_BOARD_DIR "src/platform/sf")
 else(${BOARD_REVISION} EQUAL "1")
